--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,14 @@
             <version>9.0.10</version>
         </dependency>
 
+
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>8.0.26</version>
+            </dependency>
+
+
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
